[package]
name = "enrs"
version = "0.2.0"
authors = ["OvermindDL1 <overminddl1@gmail.com>"]
edition = "2018"
description = "EntityComponentSystem library for Rust based on the EnTT C++ Library Designs"

[dependencies]
indexmap = "1.5" # Convenient implementation of an indexmap
rayon = "1.4" # Handles performing multi-threading
crossbeam = "0.7" # Useful various multithreading 'things' so as to not make them myself
frunk = "0.3.1" # REMOVEABLE: Using this is easier than making my own for now, hopefully removed with variadic tuples in Rust later
generic-array = "0.14.4" # REMOVEABLE: Because no const generics yet, remove this when those become stable
# reffers = "0.6.0" # REMOVEABLE: Because no GAT's in stable rust yet
owning_ref = "0.4.1" # REMOVEABLE: Because no GAT's in stable rust yet
rental = "0.5.5" # Self referentiable struct, because otherwise can't get mut references to different items in a map even if all distinct...
tinyvec = { version = "1.0", features = ["alloc"] } # Used for group iterating so far
smallvec = "1.4.2" # tinyvec but supports !Default, not as many useful things inside though
arrayvec = "0.5.1" # Like tinyvec but without default and array only, can potentially go bigger than 32 as well, see features if needed
bitvec = "0.19" # Used for a variety of purposes, general container
itertools = "0.9" # Useful iterator extensions that really should be built in to the standard library...
smol_str = "0.1" # Useful small string optimized string container, 22 bytes or less is allocationless

[features]
default = []
enrs_disable_asserts = []

[dev-dependencies]
criterion = "0.3.3"
# proc-macro2 = "1.0.9"
# legion = "0.2.4"
# legion = { git = "https://github.com/TomGillen/legion" }
# shipyard = { git = "https://github.com/leudz/shipyard.git" }
# specs = "0.16.1"

[profile.release]
# debug = false
lto = "thin"

[[bench]]
name = "bench_main"
harness = false
